@@ -16,12 +16,7 @@ our @ISA = ('Warewulf::Object');
 
 =head1 NAME
 
-Warewulf::Node - Warewulf's general object instance object interface.
-
-=head1 ABOUT
-
-This is the primary Warewulf interface for getting and setting the base
-configuration of node objects.
+Warewulf::Node - Warewulf's Node object interface.
 
 =head1 SYNOPSIS
 
@@ -43,17 +38,20 @@ configuration of node objects.
     printf("%s: %s\n", $o->name, $o->ipaddr("eth0"));
     printf("%s: %s\n", $o->name, $o->ipaddr("eth1"));
 
+=head1 DESCRIPTION
+
+The C<Warewulf::Node> object acts as a container for all members and
+sub-objects needed to describe a Node.  This includes names, groups,
+network devices, etc.  This object provides methods for querying and
+modifying all members of Node objects.
 
 =head1 METHODS
 
-=over 12
-
-=cut
+=over 4
 
 =item new()
 
-The new constructor will create the object that references configuration the
-stores.
+Create and return a new Node instance.
 
 =cut
 
@@ -82,24 +80,23 @@ id()
 {
     my ($self) = @_;
 
-    return($self->get("_id") || "UNDEF");
+    return ($self->get("_id") || "UNDEF");
 }
 
 
 
 =item name($nodename, $clustername, $domainname)
 
-Get or set the name of the node. Because nodes can be part of multiple clusters
-or sites the name itself is made up of several other object members (nodename,
-cluster, domain). When setting any of these, the node's name is set
-appropriately.
+Get or set the name of the node.  Because nodes can be part of multiple
+clusters or sites, the name itself is made up of several other object members
+(nodename, cluster, domain).  When setting any of these, the node's canonical
+name is updated appropriately.
 
-As a shortcut, you can set these also by supplying arguments here. This is
-mostly to be compatible with the earlier which now will set the nodename
-member.
+As a shortcut, you can set these also by supplying arguments here.  This is
+mostly for backward compatibility.
 
-If called in an array context, this will return all known names for this node,
-otherwise a scalar is return of the most descriptive form.
+In a list context, this method returns all known names for the C<Node>.  In a
+scalar context, it returns the most complete name.
 
 =cut
 
@@ -124,7 +121,7 @@ name()
 
     @names = $self->get("name");
 
-    return(wantarray ? @names : pop(@names));
+    return ((wantarray()) ? (@names) : ($names[0]));
 }
 
 
@@ -138,14 +135,13 @@ sub
 nodename()
 {
     my $self = shift;
-
     my $nodename = $self->prop("nodename", qr/^([a-zA-Z0-9_\-]+)$/, @_);
 
     if (@_) {
         $self->genname();
     }
 
-    return($nodename);
+    return $nodename;
 }
 
 
@@ -160,14 +156,13 @@ sub
 cluster()
 {
     my $self = shift;
-
     my $cluster = $self->prop("cluster", qr/^([a-zA-Z0-9_\-]+)$/, @_);
 
     if (@_) {
         $self->genname();
     }
 
-    return($cluster);
+    return $cluster;
 }
 
 
@@ -181,14 +176,13 @@ sub
 domain()
 {
     my $self = shift;
-
     my $domain = $self->prop("domain", qr/^([a-zA-Z0-9_\-\.]+)$/, @_);
 
     if (@_) {
         $self->genname();
     }
 
-    return($domain);
+    return $domain;
 }
 
 
@@ -207,6 +201,7 @@ groups()
     if (@strings) {
         my $name = $self->get("name");
         my @newgroups;
+
         foreach my $string (@strings) {
             if ($string =~ /^([a-zA-Z0-9_\.\-]+)$/) {
                 &dprint("Object $name set $key += '$1'\n");
@@ -218,7 +213,7 @@ groups()
         }
     }
 
-    return($self->get($key));
+    return $self->get($key);
 }
 
 
@@ -236,6 +231,7 @@ groupadd()
 
     if (@strings) {
         my $name = $self->get("name");
+
         foreach my $string (@strings) {
             if ($string =~ /^([a-zA-Z0-9_\.\-]+)$/) {
                 &dprint("Object $name set $key += '$1'\n");
@@ -246,7 +242,7 @@ groupadd()
         }
     }
 
-    return($self->get($key));
+    return $self->get($key);
 }
 
 
@@ -283,285 +279,203 @@ sub
 netdevs()
 {
     my ($self, $match) = @_;
+    my $netdevs;
     my @device_names;
 
-    if ($self->get("netdevs")) {
-        &dprint("Legacy netdev format exists...\n");
-        foreach my $ndev ($self->get("netdevs")) {
-            if (! $match or $match eq $ndev->get("name")) {
-                push(@device_names, $ndev->get("name"));
-            }
+    $netdevs = $self->get("netdevs");
+    if (! $netdevs) {
+        if ($self->get("_netdevset")) {
+            # FIXME:  Remove this?
+            $netdevs = $self->set("netdevs", $self->get("_netdevset"));
+            $self->del("_netdevset");
+        } else {
+            $netdevs = $self->set("netdevs", Warewulf::ObjectSet->new());
         }
-    }
-    if ($self->get("_netdevset")) {
-        foreach my $name ($self->get("_netdevset")->get_list_entries("name")) {
-            if (! $match or $match eq $name) {
-                push(@device_names, $name);
-            }
-        }
-    }
 
-    return(@device_names);
+    } elsif (ref($netdevs) eq "ARRAY") {
+        my @netdev_objs;
+
+        # FIXME:  This shouldn't be necessary.
+        @netdev_objs = map {
+                         UNIVERSAL::isa($_, "Warewulf::Object")
+                             || bless($_, "Warewulf::Object")
+                       } @{$netdevs};
+        $self->set("netdevs", Warewulf::ObjectSet->new(@netdev_objs));
+    }
+    if ($match) {
+        return $netdevs->find("name", $match);
+    } else {
+        return $netdevs;
+    }
 }
 
+=item netdevs_list()
 
-=item get_netobj($name)
+Return a list of network device names.  This is just a convenience wrapper to
+match up with hwaddr_list() and ipaddr_list().
+
+=cut
+
+sub
+netdevs_list()
+{
+    my ($self) = @_;
+
+    return $self->netdevs()->get_list_entries("name");
+}
+
+=item netdev_get_add($devname)
 
 Find or create the netdev object for this node of a given device name.
 
 =cut
 
 sub
-get_netobj()
+netdev_get_add()
 {
-    my ($self, $name) = @_;
-    my $netObj;
+    my ($self, $devname) = @_;
+    my $netdev;
 
-    if (! $self->get("_netdevset")) {
-        &dprint("Creating new netdev ObjectSet\n");
-        $self->set("_netdevset", Warewulf::ObjectSet->new());
+    if (!($devname = &validate_netdev_name($devname))) {
+        return undef;
     }
-
-    if ($self->get("netdevs")) {
-        &iprint("Converting legacy netdev entry(s) for node: $name\n");
-        my $name = $self->name();
-        foreach my $ndev ($self->get("netdevs")) {
-            bless($ndev, "Warewulf::Object");
-            $self->get("_netdevset")->add($ndev);
-        }
-        $self->get("_netdevset")->add($NetDevSet);
-        $self->del("netdevs");
+    $netdev = $self->netdevs($devname);
+    if (! $netdev) {
+        $netdev = Warewulf::Object->new();
+        $netdev->set("name", $devname);
+        $self->netdevs()->add($netdev);
     }
-
-    &dprint("Searching for device $name in the netdev set\n");
-    $netObj = $self->get("_netdevset")->find("name", $name);
-
-    if (! $netObj) {
-        &dprint("Creating new netdev object for '$name'\n");
-        my $netDevSet = $self->get("_netdevset");
-        $netObj = Warewulf::Object->new();
-        $netObj->set("name", $name);
-        $netDevSet->add($netObj);
-        $self->get("_netdevset")->add($NetDevSet);
-    }
-
-    return $netObj;
+    return $netdev;
 }
 
 
-=item netdel($device)
+=item netdel($devname)
 
-Delete a network device from the object
+Delete a network device from the C<Node>
 
 =cut
 
 sub
 netdel()
 {
-    my ($self, $device) = @_;
+    my ($self, $devname) = @_;
+    my $netdev;
 
-    if (! $self->get("_netdevset")) {
-        &dprint("Called netdel() on non-existant netdev ObjectSet!\n");
-        return();
+    if (!($devname = &validate_netdev_name($devname))) {
+        return undef;
     }
+    $netdev = $self->netdevs($devname);
+    if ($netdev) {
+        my $nodename = $self->nodename() || "UNDEF";
+        my $hwaddr = $netdev->get("hwaddr");
+        my $ipaddr = $netdev->get("ipaddr");
 
-    if ($device and $device =~ /^([a-z]+\d*)$/) {
-        my $netdevObject = $self->get("_netdevset")->find("name", $1);
-        my $name = $self->get("name") || "UNDEF";
-
-        if ($netdevObject) {
-            &dprint("Object $name del netdev $device\n");
-            my $hwaddr = $netdevObject->get("hwaddr");
-            $self->get("_netdevset")->del($netdevObject);
-            if ($hwaddr) {
-                $self->del("_hwaddr", $hwaddr);
-            }
-        } else {
-            &eprint("Object $name has no netdev '$device' configured!\n");
+        &dprint("Object $nodename del netdev $devname\n");
+        $self->netdevs()->del($netdev);
+        if ($hwaddr) {
+            $self->del("_hwaddr", $hwaddr);
+        }
+        if ($ipaddr) {
+            $self->del("_ipaddr", $ipaddr);
         }
     } else {
-        &eprint("Bad device name: $device\n");
+        &eprint("Object $nodename has no netdev \"$devname\" configured!\n");
     }
-
-    return();
+    return $netdev;
 }
 
 
-=item list_hwaddr()
+=item hwaddr_list()
 
 Shortcut to retrieve a list of all HWADDR's for this node
 
 =cut
 
 sub
-list_hwaddr()
+hwaddr_list()
 {
     my $self = shift;
 
-    return($self->get("_hwaddr"));
+    return $self->get("_hwaddr");
 }
 
 
-=item list_ipaddr()
+=item hwaddr($devname, [ $value ])
 
-Shortcut to retrieve a list of all IP addresses for this node
-
-=cut
-
-sub
-list_ipaddr()
-{
-    my $self = shift;
-
-    return($self->get("_ipaddr"));
-}
-
-
-=item hwaddr($device, $value)
-
-Set or return the hwaddr for a given device
+Get or set the hwaddr for the network device named I<$devname>.
 
 =cut
 
 sub
 hwaddr()
 {
-    my ($self, $device, $string) = @_;
-    my $key = "hwaddr";
+    my ($self, $devname, $new_hwaddr) = @_;
 
-    if ($device and $device =~ /^([a-z]+\d*)$/) {
-        my $netdevObject = $self->get_netobj($1);
-        my $name = $self->get("name") || "UNDEF";
-        if ($string) {
-            if ($string =~ /^((?:[0-9a-f]{2}:){5}[0-9a-f]{2})$/) {
-                if ($netdevObject->get($key)) {
-                    # Delete the previous hwaddr if exists...
-                    $self->del("_hwaddr", $netdevObject->get($key));
-                }
-                &dprint("Setting object $name: $device.$key = $1\n");
-                $netdevObject->set($key, $1);
-                $self->add("_hwaddr", $1);
-            } else {
-                &eprint("Invalid characters to set $key = '$string'\n");
-            }
-        }
-        &dprint("Returning netdevObject->get($key)\n");
-        return($netdevObject->get($key));
-    } else {
-        &eprint("Bad device name!\n");
-    }
-
-    return();
+    return $self->update_netdev_member($devname, "hwaddr", "_hwaddr", $new_hwaddr,
+                                       qr/^((?:[0-9a-f]{2}:){5}[0-9a-f]{2})$/);
 }
 
 
-=item ipaddr($device, $value)
+=item ipaddr_list()
 
-Set or return the ipaddr for a given device
+Shortcut to retrieve a list of all IP addresses for this node
+
+=cut
+
+sub
+ipaddr_list()
+{
+    my $self = shift;
+
+    return $self->get("_ipaddr");
+}
+
+
+=item ipaddr($devname, [ $value ])
+
+Get or set the ipaddr for the network device named I<$devname>.
 
 =cut
 
 sub
 ipaddr()
 {
-    my ($self, $device, $string) = @_;
-    my $key = "ipaddr";
-    my $netdevObject;
+    my ($self, $devname, $new_ipaddr) = @_;
 
-    if ($device and $device =~ /^([a-z]+\d*)$/) {
-        my $netdevObject = $self->get_netobj($1);
-        my $name = $self->get("name") || "UNDEF";
-        if ($string) {
-            if ($string =~ /^(\d+\.\d+\.\d+\.\d+)$/) {
-                if ($netdevObject->get($key)) {
-                    # Delete the previous hwaddr if exists...
-                    $self->del("_hwaddr", $netdevObject->get($key));
-                }
-                &dprint("Setting object $name: $device.$key = $1\n");
-                $netdevObject->set($key, $1);
-                $self->add("_ipaddr", $1);
-            } else {
-                &eprint("Invalid characters to set $key = '$string'\n");
-            }
-        }
-        if ($netdevObject) {
-            return($netdevObject->get($key));
-        }
-    } else {
-        &eprint("Bad device name!\n");
-    }
-
-    return();
+    return $self->update_netdev_member($devname, "ipaddr", "_ipaddr", $new_ipaddr,
+                                       qr/^(\d+\.\d+\.\d+\.\d+)$/);
 }
 
 
-=item netmask($device, $value)
+=item netmask($devname, [ $value ])
 
-Set or return the netmask for a given device
+Get or set the netmask for the network device named I<$devname>.
 
 =cut
 
 sub
 netmask()
 {
-    my ($self, $device, $string) = @_;
-    my $key = "netmask";
-    my $netdevObject;
+    my ($self, $devname, $new_netmask) = @_;
 
-    if ($device and $device =~ /^([a-z]+\d*)$/) {
-        my $netdevObject = $self->get_netobj($1);
-        my $name = $self->get("name") || "UNDEF";
-        if ($string) {
-            if ($string =~ /^(\d+\.\d+\.\d+\.\d+)$/) {
-                &dprint("Setting object $name: $device.$key = $1\n");
-                $netdevObject->set($key, $1);
-            } else {
-                &eprint("Invalid characters to set $key = '$string'\n");
-            }
-        }
-        if ($netdevObject) {
-            return($netdevObject->get($key));
-        }
-    } else {
-        &eprint("Bad device name!\n");
-    }
-
-    return();
+    return $self->update_netdev_member($devname, "netmask", "", $new_netmask,
+                                       qr/^(\d+\.\d+\.\d+\.\d+)$/);
 }
 
 
-=item fqdn($device, $value)
+=item fqdn($devname, [ $value ])
 
-Set or return the FQDN for a given device
+Get or set the FQDN for the network device named I<$devname>.
 
 =cut
 
 sub
 fqdn()
 {
-    my ($self, $device, $string) = @_;
-    my $key = "fqdn";
-    my $netdevObject;
+    my ($self, $devname, $new_fqdn) = @_;
 
-    if ($device and $device =~ /^([a-z]+\d*)$/) {
-        my $netdevObject = $self->get_netobj($1);
-        my $name = $self->get("name") || "UNDEF";
-        if ($string) {
-            if ($string =~ /^([a-zA-Z0-9\-\.\_]+)$/) {
-                &dprint("Setting object $name: $device.$key = $1\n");
-                $netdevObject->set($key, lc($1));
-            } else {
-                &eprint("Invalid characters to set $key = '$string'\n");
-            }
-        }
-        if ($netdevObject) {
-            return($netdevObject->get($key));
-        }
-    } else {
-        &eprint("Bad device name!\n");
-    }
-
-    return();
+    return $self->update_netdev_member($devname, "fqdn", "", $new_fqdn,
+                                       qr/^([a-zA-Z0-9\-\.\_]+)$/);
 }
 
 
@@ -581,22 +495,79 @@ required approvals from the U.S. Dept. of Energy).  All rights reserved.
 
 =cut
 
+# Validate a network device name.
+sub
+validate_netdev_name()
+{
+    my ($devname) = @_;
 
+    if ($devname && ($devname =~ /^(\w+)$/)) {
+        return lc($1);
+    } else {
+        &eprint("Invalid network device name \"$devname\"\n");
+        return undef;
+    }
+}
 
+# Update a netdev sub-object.
+sub
+update_netdev_member()
+{
+    my ($self, $devname, $member, $tracker, $new_value, $validator) = @_;
+    my ($netdev, $nodename);
 
+    $nodename = $self->get("name") || "UNDEF";
+    if (! $devname) {
+        my $netdevs = $self->netdevs();
+
+        if ($netdevs->count() == 1) {
+            $devname = $netdevs->get_object(0)->get("name");
+        } else {
+            &eprintf("Device name required; node $nodename has %d network devices.",
+                     $netdevs->count());
+            return undef;
+        }
+    }
+    if (!($devname = &validate_netdev_name($devname))) {
+        return undef;
+    }
+
+    $netdev = $self->netdev_get_add($devname);
+    if ($new_value) {
+        if ($new_value =~ $validator) {
+            my $old_value = $netdev->get($member) || "";
+
+            $new_value = $1;
+            &dprint("Updating object $nodename.$devname.member:  \"$old_value\" -> \"$new_value\"\n");
+            $netdev->set($member, $new_value);
+            if ($tracker) {
+                if ($old_value) {
+                    # Delete the previous member if exists...
+                    $self->del($tracker, $old_value);
+                }
+                $self->add($tracker, $new_value);
+            }
+        } else {
+            &eprint("Invalid value for $nodename.$devname.$member:  \"$new_value\"\n");
+        }
+    }
+    return $netdev->get($member);
+}
 
 # This function is used internally to update the object's name member which
 # is dynamically created to account for more complicated nomenclature schemes.
 sub
-genname() {
+genname()
+{
     my ($self) = @_;
     my $nodename = $self->nodename();
     my $clustername = $self->cluster();
     my $domainname = $self->domain();
     my @names;
 
-    if (! defined($nodename)) {
+    if (!defined($nodename)) {
         my $name = $self->get("name");
+
         if (ref(\$name) eq "SCALAR") {
             &dprint("Object nodename not defined, converting...\n");
             $nodename = $name;
@@ -606,14 +577,13 @@ genname() {
 
     if (defined($nodename)) {
         push(@names, $nodename);
-        if (! defined($clustername) and defined($domainname)) {
-            push(@names, $nodename .".". $domainname);
-        }
         if (defined($clustername)) {
-            push(@names, $nodename .".". $clustername);
-        }
-        if (defined($clustername) and defined($domainname)) {
-            push(@names, $nodename .".". $clustername .".". $domainname);
+            push(@names, "$nodename.$clustername");
+            if (defined($domainname)) {
+                push(@names, "$nodename.$clustername.$domainname");
+            }
+        } elsif (defined($domainname)) {
+            push(@names, "$nodename.$domainname");
         }
     }
 
@@ -621,7 +591,7 @@ genname() {
         $self->set("name", \@names);
     }
 
-    return();
+    return;
 }
 
 
